--- a/ASP.NET Core/MailMergeExample.csproj
+++ b/ASP.NET Core/MailMergeExample.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Syncfusion.EJ2.WordEditor.AspNet.Core" Version="20.2.0.44" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
